infrastructure/overlays/dev/01-base-config/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: networking
spec:
  gatewayClassName: envoy
  listeners:
    - name: https-internal
      hostname: "*.${INTERNAL_ADDRESS}"
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
